--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-
+        <link rel="stylesheet" href="public/assets/styles.css"/>
     </head>
     <body>
 
      <h1>testss</h1>
-     <script src="http://localhost:8080/webpack-dev-server.js"></script>
-     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+     <!--<script src="http://localhost:3001/webpack-dev-server.js"></script>-->
+     <script type="text/javascript" src="public/assets/bundle.js" charset="utf-8"></script>
     </body>
 </html>
