--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,17 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="assets/styles.css"/>
-    </head>
-    <body>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="assets/application.css"/>
+</head>
+<body>
+<div class="container">
 
-     <h1>testss</h1>
-     <script src="http://localhost:8080/webpack-dev-server.js"></script>
-     <script type="text/javascript" src="assets/bundle.js" charset="utf-8"></script>
-    </body>
+    <h1>testss</h1>
+    <hr/>
+    <app></app>
+</div>
+<script src="http://localhost:8080/webpack-dev-server.js"></script>
+<script type="text/javascript" src="assets/vendors.js" charset="utf-8"></script>
+<script type="text/javascript" src="assets/application.js" charset="utf-8"></script>
+</body>
 </html>
